[package]
name = "aw-rss"
version = "0.1.0"
edition = "2021"
description = "Awused's personal rss reader"
readme = "README.md"
license = "MIT"
keywords = ["rss"]
homepage = "https://github.com/awused/aw-rss"
repository = "https://github.com/awused/aw-rss"

[dependencies]
async-channel = "2.3.1"
atom_syndication = { version = "0.12.4", default-features = false }
axum = { version = "0.7.7", default-features = false, features = ["http1", "json", "tokio", "tracing", "tower-log"]}
awconf = { git = "https://github.com/awused/awconf" }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "alloc", "serde"] }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
dateparser = "0.2.1"
derive_more = { version = "1.0.0", default-features = false, features = ["from", "deref", "deref_mut"] }
event-listener = "5.3.1"
futures-util = { version = "0.3.31", default-features = false }
humansize = "2.1.3"
humantime = "2.1.0"
# TODO -- this one should get merged into Futures
mapped_futures = "0.1.13"
mime_guess = "2.0.5"
once_cell = "1.20.2"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["brotli", "deflate", "json", "gzip", "rustls-tls"] }
rust-embed = { version = "8.5.0", features = ["compression"] }
rss = { version = "2.0.9", default-features = false }
scraper = { version = "0.20.0", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
sha2 = "0.10.8"
shlex = "1.3.0"
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "chrono", "sqlite", "migrate"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "process", "rt", "sync", "time"] }
tower = { version = "0.5.1", features = ["limit"] }
tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.5"
