[package]
name = "aw-rss"
version = "0.1.0"
edition = "2024"
description = "Awused's personal rss reader"
readme = "README.md"
license = "MIT"
keywords = ["rss"]
homepage = "https://github.com/awused/aw-rss"
repository = "https://github.com/awused/aw-rss"

[dependencies]
async-channel = "2.3.1"
atom_syndication = { version = "0.12.7", default-features = false }
axum = { version = "0.8.4", default-features = false, features = ["http1", "json", "tokio", "tracing", "tower-log"]}
awconf = { git = "https://github.com/awused/awconf" }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std", "alloc", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
dateparser = "0.2.1"
derive_more = { version = "2.0.1", default-features = false, features = ["from", "deref", "deref_mut"] }
event-listener = "5.4.0"
futures-util = { version = "0.3.31", default-features = false }
humansize = "2.1.3"
humantime = "2.2.0"
# TODO -- this one should get merged into Futures
mapped_futures = "0.2.1"
mime_guess = "2.0.5"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["brotli", "deflate", "json", "gzip", "rustls-tls"] }
rust-embed = { version = "8.7.2", features = ["compression"] }
rss = { version = "2.0.12", default-features = false }
scraper = { version = "0.23.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
sha2 = "0.10.9"
shlex = "1.3.0"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "chrono", "sqlite", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "process", "rt", "sync", "time"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.4", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.7"
